--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 8</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/basicLightbox/5.0.4/basicLightbox.min.css">
     <link rel="stylesheet" href="./css/styles.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/basicLightbox/5.0.4/basicLightbox.min.js"></script>
     <script src="./js/gallery-js.js" type="module" defer></script>
   </head>
   <body>
+    <h1 class="page-title">Nature gallery:</h1>
     <ul class="gallery"></ul>
   </body>
 </html>
