--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/basicLightbox/5.0.4/basicLightbox.min.js"></script>
-    <script src="./js/gallery-js.js" type="module" defer></script>
+    <script src="./js/gallery.js" type="module" defer></script>
   </head>
   <body>
     <h1 class="page-title">Nature gallery:</h1>
